--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guía de Creación de Dashboard - Índice</title>
+    <title>Guía</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -28,28 +28,27 @@
     <nav class="p-4 shadow-lg sticky top-0 z-50">
         <ul class="flex justify-center space-x-2 md:space-x-8 text-sm md:text-base">
             <li><a href="public/Guia.html" class="nav-link rounded-full">Parte 1: Creación del Dashboard</a></li>
-        
+<!--             
             <li><a href="capitulo2.html" class="nav-link rounded-full">Parte 2: Reportes y Gráficos</a></li>
             <li><a href="capitulo3.html" class="nav-link rounded-full">Parte 3: Interacción del Usuario</a></li>
-            <li><a href="capitulo4.html" class="nav-link rounded-full">Parte 4: Personalización Avanzada</a></li>
+            <li><a href="capitulo4.html" class="nav-link rounded-full">Parte 4: Personalización Avanzada</a></li> -->
         </ul>
     </nav>
 
     <main class="flex-grow container mx-auto p-8">
         <header class="text-center mb-12">
-            <h1 class="text-4xl md:text-6xl font-extrabold text-slate-800">Guía APEX Interactiva</h1>
-            <p class="mt-4 text-lg text-slate-600 max-w-2xl mx-auto">Selecciona un capítulo de la barra de navegación para comenzar tu aprendizaje sobre la creación de dashboards dinámicos en Oracle APEX.</p>
+            <h1 class="text-4xl md:text-6xl font-extrabold text-slate-800">Guía APEX Desarrollo de SIGCAF</h1>
         </header>
 
         <section class="bg-white p-8 md:p-12 rounded-xl shadow-xl max-w-3xl mx-auto text-slate-700">
+                        <img style="margin: 2% 2% 2% 35%; width: 30%; " src="img/SIGCAF.png" alt="">
             <h2 class="text-3xl font-bold mb-6 text-slate-900">Bienvenido</h2>
-            <p class="mb-4">Esta guía te llevará paso a paso a través del proceso de creación de una aplicación robusta en Oracle APEX. Desde la configuración de la base de datos hasta la seguridad y la visualización de datos, aprenderás todo lo necesario para construir dashboards dinámicos y funcionales.</p>
-            <p>Usa la barra de navegación en la parte superior para explorar cada capítulo. Cada sección contiene instrucciones detalladas, código reutilizable y consejos clave para ayudarte a dominar el proceso.</p>
+            <p style="text-align: justify;" class="mb-4">Guía del proceso de creación de la aplicación de SIGCAF en Oracle APEX. Desde la configuración de la base de datos hasta la seguridad y la visualización de datos, guia con todo lo necesario para construir dashboards dinámicos y funcionales para la aplicaciòn.</p>
         </section>
     </main>
 
     <footer class="p-4 text-center text-sm text-slate-500">
-        © 2024 Guía de Oracle APEX. Todos los derechos reservados.
+        © 2025 Guía de Oracle APEX. Todos los derechos reservados.
     </footer>
 
 </body>
